
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.include.MainActivity" >

    <TextView
        android:id="@+id/HajsMusiSieZgadzac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/edytujDlugDataPozyczki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/edytujDlugDataZwrotu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldonum"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/edytujDluznika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dluznicy" 
        android:onClick="lista"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/wierzyciele" 
        android:onClick="wierzyciele"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/info" 
        android:onClick="info"/>

</TableLayout>