<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.include.dluznicy.EdytujDaneDluznika" 
    >
    
    <TextView
        android:id="@+id/ksywa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksywka" />

    <EditText
        android:id="@+id/ksywaed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/nazwisko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwisko" />

    <EditText
        android:id="@+id/nazwiskoed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/telefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefon" />

    <EditText
        android:id="@+id/teled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/aders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adres" />

    <EditText
        android:id="@+id/adresed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/edytujDluznika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zapisz"
        android:onClick="zapisz"/>

</LinearLayout>
