<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.include.dluznicy.DodajDluznika" >

    <TextView
        android:id="@+id/HajsMusiSieZgadzac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksywka" />

    <EditText
        android:id="@+id/edytujDlugKwotaEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/edytujDlugDataPozyczki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwisko" />

    <EditText
        android:id="@+id/edytujDlugDataPozyczkiEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/edytujDlugDataZwrotu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefon" />

    <EditText
        android:id="@+id/edytujDlugDataZwrotuEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/edytujDlugNotka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adres" />

    <EditText
        android:id="@+id/edytujDlugNotkaEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/edytujDluznika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dodaj"
        android:onClick="dodajDluznika"/>

</LinearLayout>
